Remove redundant methods and imports, streamline code
Deleted the unused method `changePosition` from `Coordinate.java` and the `collectPredators` method from `World.java`. Simplified import statements in `Main.java` and other classes by removing unnecessary ones. Made minor performance improvements in `MapRenderer.java` and `World.java`.